src/objects/MX_RTE_PI__c.object
<CustomObject>
    <description>Objeto donde se encuentra la informaciòn de los PI, como fecha de incio y fin.</description>
    <fields>
        <fullName>MX_RTE_Ano_PI__c</fullName>
        <description>Campo de Fórmlula que obtiene el Nó. de Año del PI  a partir del nombre del PI del registro.</description>
        <formula>VALUE( RIGHT( Name , 2 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Año del Q</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Demo_Day__c</fullName>
        <description>Campo que indica la fecha de esta ceremonia.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Demo Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Demo_Party__c</fullName>
        <description>Campo que indica la fecha de esta ceremonia.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Demo Party</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Fecha_Inicio__c</fullName>
        <description>Fecha de inicio del PI</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Fecha_fin__c</fullName>
        <description>Fecha de fin del PI.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Inception__c</fullName>
        <description>Campo de fecha para la Ceremonia: Inception</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Inception</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_RTE_No_PI__c</fullName>
        <description>Campo de Fórmlula que obtiene el Nó. de PI a partir del nombre del PI del registro.</description>
        <formula>VALUE( LEFT( Name , 1 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. del Q</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_PI_Planning__c</fullName>
        <description>Campo que indica la fecfa del evento.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PI Planning</label>
        <type>Date</type>
    </fields>
    <label>Q&apos;s</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MX_RTE_Fecha_Inicio__c</columns>
        <columns>MX_RTE_Demo_Day__c</columns>
        <columns>MX_RTE_Demo_Party__c</columns>
        <columns>MX_RTE_Fecha_fin__c</columns>
        <columns>MX_RTE_Inception__c</columns>
        <columns>MX_RTE_PI_Planning__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre del Q</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Q&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MX_RTE_Nombre_con_formato_valido</fullName>
        <active>true</active>
        <description>El formato es invalido, por favor ingresa un nombre que respete la estructura No. PI-Q-Año. Por ejemplo 1Q19</description>
        <errorConditionFormula>NOT(REGEX( Name , &quot;[1-4]{1}[Q]{1}[0-9]{2}&quot;))</errorConditionFormula>
        <errorMessage>El formato es invalido, por favor ingresa un nombre que respete la estructura No. PI-Q-Año. Por ejemplo 1Q19</errorMessage>
    </validationRules>
</CustomObject>